# HPC-IA

RegresionLineal/: CMakeLists.txt  linearregresion.cpp  linearregresion.h  main.cpp
RegresionLineal/Debug/: CMakeCache.txt  Makefile  VectorCosto.txt  VectorTheta.txt  YTrainHat.txt  cmake_install.cmake  y_train_hat.txt
RegresionLineal/Debug/.cmake/api/v1/reply/: cache-v2-1a6fbacc6859bc5f8754.json  cmakeFiles-v1-75fec6756595ee20a5b6.json  codemodel-v2-d6c478d1bce6eb11a6f9.json  index-2022-05-24T00-59-15-0483.json  target-RegresionLineal-Debug-86d7cd5d2aca694b9b05.json
RegresionLineal/dataset/: data.csv  diamondsHPC.csv  diamondsHPC_fixed.csv  winedata.csv
RegresionLineal/extraerdata/: extraerdata.cpp  extraerdata.h
RegresionLinealSklearn/: Parcial_3.ipynb
